bug fix -> use existing java 8 methods